<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/container"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_margin="1dp"
    android:baselineAligned="false">
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_pen"
                    android:backgroundTint="#777777"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/test_time"
                    android:textSize="18sp" />
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taoyuan"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
         <TextView
             android:id="@+id/tv_detail"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_margin="10dp"
             android:text="@string/busdetail"/>
        </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">
        <Button
            android:id="@+id/bn_geton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/raising32"
            android:gravity="center"
            android:text="@string/get_on"
            android:textAlignment="gravity" />
        <Button
            android:id="@+id/bn_service"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/disable_service32"
            android:gravity="center"
            android:text="@string/request_special_service"
            android:textAlignment="gravity"
            style="?android:attr/borderlessButtonStyle" />
        </LinearLayout>

</LinearLayout>