<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12">

    <include layout="@layout/toolbar"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:background="#EEEEEE">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <LinearLayout
        android:id="@+id/keyboard_container"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="#CCCCCC">
        <ImageButton
            android:id="@+id/ib_keyboardUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:src="@drawable/up48"
            android:background="#FFFFFF"
            android:visibility="gone"
        />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keyboard"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="visible">
            <Button
                android:id="@+id/bn_1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_1"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.05"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_2"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_1"

                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.05"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_3"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_2"


                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintVertical_bias="0.05"

                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_4"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_4"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.05"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_5"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_5"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_4"

                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.05"

                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_6"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_6"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_5"


                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintVertical_bias="0.05"

                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_7"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_7"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_8"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_8"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_7"


                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_9"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_9"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_8"


                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_l"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/l"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_0"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/_0"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_l"


                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintDimensionRatio="2.1:1"
                />
            <Button
                android:id="@+id/bn_clean"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/clean"
                android:textSize="22sp"
                android:padding="12dp"
                android:background="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@id/bn_9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bn_0"


                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintDimensionRatio="2.1:1"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
