<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <include layout="@layout/toolbar"
       android:id="@+id/container"/>

    <Button
        android:id="@+id/bn_bus_Taipei"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/bus128"
        android:text="@string/taipei"
        android:textStyle="bold"
        android:background="@drawable/button_rounde_taipei"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"

        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.1"

        />
    <Button
        android:id="@+id/bn_bus_TaoYuan"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/bus128"
        android:text="@string/taoyuan"

        android:textStyle="bold"
        android:background="@drawable/button_rounde_taoyuan"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bn_bus_Taipei"
        app:layout_constraintTop_toBottomOf="@id/container"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"

        />
    <Button
        android:id="@+id/bn_bus_Taichung"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/bus128"
        android:text="@string/taichung"

        android:textStyle="bold"
        android:background="@drawable/button_rounde_taichung"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bn_bus_Taipei"

        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.2"

        />
    <Button
        android:id="@+id/bn_bus_Kaohsiung"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/bus128"
        android:text="@string/kaohsiung"

        android:textStyle="bold"
        android:background="@drawable/button_rounde_kaohsiung"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bn_bus_Taichung"
        app:layout_constraintTop_toBottomOf="@id/bn_bus_TaoYuan"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"

        />




</androidx.constraintlayout.widget.ConstraintLayout>