<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/tool" layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/city_container"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/tool"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_container"
        app:layout_constraintWidth_percent="0.7"
        >
        <EditText
            android:id="@+id/et_radius"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/radius"
            android:inputType=""
            android:textColor="#88000000"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/bn_send"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_container"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="@string/query"
        android:background="@drawable/shape_capsule"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/bn_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1.2"
        android:layout_margin="10dp"
        android:visibility="gone">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nearbyBusStop"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
        <ListView
            android:id="@+id/listView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>